# tripmate

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  WEBSOCKET_CHAT.md  docker-compose.yml  entrypoint.sh  populate_db.py  pyproject.toml  requirements.txt  skills-lock.json
alembic/: env.py
alembic/versions/: 1883f4b07d98_test.py  209409edaed3_init.py  28b20375650e_init.py  292d5e2fb4c4_added_offer.py  3ec9cfb7da35_added_offer.py  643d25a122fb_chats_adde.py  7085a51c7ed4_added_unique.py  ad4ec6be5861_adding_travel_style.py  b4f77f403b3c_adding_travel_style.py  f24592752bc2_init.py
app/: main.py
app/api/: auth.py  chat.py  dependencies.py  deps.py  offer.py  profile.py  trip_vacancy.py  websocket_manager.py
app/core/: config.py  database.py  redis_client.py  security.py
app/models/: __init__.py  auth.py  chat_group.py  chat_member.py  interest.py  language.py  message.py  offer.py  profile.py  travel_style.py  trip_vacancy.py  user.py
app/repositories/: auth_repository.py  chat_group_repository.py  chat_member_repository.py  message_repository.py  offer_repository.py  profile_repository.py  trip_vacancy_repository.py  user.py  user_repository.py
app/schemas/: auth.py  chat.py  offer.py  profile.py  trip_vacancy.py
app/services/: auth_service.py  chat_service.py  email_service.py  offer_service.py  profile_service.py  trip_vacancy_service.py
app/templates/email/: password_reset_en.html  password_reset_kk.html  password_reset_ru.html  (+6 more)
app/utils/: enum.py
ztest_ai/: almaty.json  astana.json  japan.json  script.py  test.json
